# doctest-271

./: Example.hs  cabal.project.freeze  doctest271.cabal  test.hs
